# audiomesh

./: .coveragerc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.ghostfinger/config/: coder_prompt.yaml  reviewer_prompt.yaml
.ghostfinger/tickets/: add-license.yaml  api-cli.yaml  api-health-check.yaml  audio-core-cli.yaml  audio-core-service.yaml  ci-cd-pipeline.yaml  config-management.yaml  discovery-daemon.yaml  docker-compose-setup.yaml  docs-update.yaml  e2e-smoke-tests.yaml  fastapi-server-endpoints.yaml  install-prereqs-script.yaml  web-ui-integration.yaml
audiomesh/: __init__.py  api.py  cli.py
discovery/: README.md  __init__.py  announcer.py  exceptions.py  listener.py  protocol.py
docker/: Dockerfile
docs/: install.md
scripts/: install_prereqs.sh
tests/: test_announcer_listener.py  test_api_module.py  test_cli.py  test_cli_api.py  test_cli_audio_core.py  test_protocol.py  test_stream.py
