[tool.poetry]
name = "audiomesh"
version = "0.1.0"
description = "Lightweight LAN-based audio distribution framework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "audiomesh"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
