[tool.poetry]
name = "audiomesh"
version = "0.1.0"
description = "Lightweight LAN-based audio distribution framework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "audiomesh"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
discovery = "audiomesh.cli:discovery"
audio-core = "audiomesh.cli:audio_core"
api = "audiomesh.cli:api"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
strict = true
