[tool.poetry]
name = "audiomesh"
version = "0.2.0"
description = "Lightweight LAN-based audio distribution framework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "audiomesh"},
    {include = "discovery"},
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
tabulate = "^0.9"
uvicorn = "^0.35"
fastapi = "^0.111"

[tool.poetry.scripts]
discovery = "audiomesh.cli:discovery"
# expose the audio_core command group as a script
audio-core = "audiomesh.cli:audio_core"
audiomesh = "audiomesh.cli:cli"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
types-click = "^7.1"
types-tabulate = "^0.9"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
strict = true
